tests/negative/lexer/float_digit.orng
fn main() -> Int {
    0.1_abc
    0
}